...
    <string name="app_name">OutfitterAndroid</string>
    <string name="hello_world">Hello worlds!</string>
    <string name="action_settings">Settings</string>
    <string name="facebook_app_id">1729896330569951</string>
    <string name="parse_app_id">SOzwRu6FgQqXZutDyUx25OhuydwfBhY5amOqp2Td</string>
    <string name="parse_client_key">wpuJaLeNKjskcN5dCWbMfqIxkfuz91tvX8sFDNXS</string>
    <string name="logout_text">Logout</string>
    <string name="camera_button_text">Take Picture</string>
    <string name="delete_user_button_text">Delete User</string>
    <string name="is_priority_check_box_text">Make this my priority submission</string>
    <string name="article_selection_option_full_outfit_text">Full Outfit</string>
    <string name="article_selection_option_top_text">Top</string>
    <string name="article_selection_option_bottom_text">Bottom</string>
    <string name="article_selection_option_shoes_text">Shoes</string>
    <string name="article_selection_option_accessory_text">Accessory</string>
...
    <string name="audience_selection_option_male_text">Guys</string>
    <string name="audience_selection_option_female_text">Girls</string>
    <string name="article_selection_option_header_text">Article</string>
    <string name="audience_selection_option_header_text">Audience</string>
    <string name="submission_description_hint">Add a description</string>
    <string name="submit">Submit</string>
    <string name="portfolio_button_text">Portfolio</string>
    <string name="discovery_button_text">Discovery</string>
    <string name="like_button_text">Like</string>
    <string name="dislike_button_text">Dislike</string>
    <string name="comments_button_text">View Comments</string>
    <string name="add_comment_button_text">add comment</string>
    <string name="write_comment_hint">Write a comment...</string>
    <string name="remove_comment_button_text">Delete</string>
...
