<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".LoginActivity">
    <!-- this is the layout for the main menu,
    each of the buttons launches a new layout and are named accordingly-->
    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/logout_text"
            android:id="@+id/profile_logout_button"
            android:layout_centerVertical="true"
            android:background="@drawable/button_shape_default"
            android:layout_centerHorizontal="true" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/delete_user_button_text"
            android:id="@+id/profile_delete_user_button"
            android:layout_below="@+id/profile_logout_button"
            android:background="@drawable/button_shape_default"
            android:layout_centerHorizontal="true" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/camera_button_text"
            android:id="@+id/profile_capture_image_button"
            android:layout_alignParentBottom="true"
            android:layout_alignLeft="@+id/profile_delete_user_button"
            android:layout_alignStart="@+id/profile_delete_user_button"
            android:background="@drawable/button_shape_default"
            android:layout_marginBottom="41dp" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/portfolio_button_text"
            android:id="@+id/profile_portfolio_button"
            android:layout_above="@+id/profile_logout_button"
            android:layout_alignRight="@+id/profile_logout_button"
            android:background="@drawable/button_shape_default"
            android:layout_alignEnd="@+id/profile_logout_button" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/discovery_button_text"
            android:id="@+id/profile_discovery_button"
            android:background="@drawable/button_shape_default"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true" />

    </RelativeLayout>

</RelativeLayout>
